Improve: Better error message in case of database error;
Improve: mlog2waffle now has a crontab script;
Improve: you can disable/enable error log in mlog2waffle in 
         mlog2waffle.conf;
Improve: waf-fle.conf minor text adjustment
Improve: Corrected push-mlogc.sh template in Event Feeder Wizard;
Improve: Filter for preserved events added. Thanks to Juraj Sakala;
Improve: Some grammar correction. Thanks to Cliton Nichols;
Improve: Now accept events sent by mod_security compiled/patched by 
         Atomic Turtle to change label "Producer" to "WAF". Issue #22 
         and #48;
Improve: mlog2waffle now support event index created by mod_security 
         compiled/patched by Atomic Turtle;
Improve: Better session handling.
         - The session are regenerated when a sucessful login occour, 
         and after 10 times the SESSION_TIMEOUT, make session more 
         robust against session hijack/fixation.
         - Expiration are now better handled, timeout happen between 
         the finish of a page processing and the next access;
Bug: In some circunstances the filter dialog are unable to show web 
     hostnames (ie. when more that 2000 entries are available), this 
     is a limitation/protection of browsers. Now the hostname was 
     changed from a combo-box, to a text input with autocomplete powered 
     by a Ajax interface, that brings hostnames when you type it on 
     hostname field. This fixes issue #15 on github. Thanks to Juraj
     Sakala for report and discuss it; 
Bug: Session is now enforced rightly when an AJAX operation is called.
Bug: Custom Tags ID's changed to in 1000, to avoid conflict with native 
     tags (thanks to juraj sakala);
Bug: Typo corrected in mlog2waffle.conf (thanks to Juraj Sakala)
Bug: Typo corrected in event feeder wizard;
Bug: Text revised in event feeder wizard;
Bug: Better URL handling in request, patch from Juraj Sakala);
Bug: Typo correction in functions.php, patch from Juraj Sakala);